1st updates by 9 lesson

--- a/lesson09/index.html
+++ b/lesson09/index.html
@@ -129,6 +129,7 @@
 
 </section>
 <!--<script src="./script/oop.js"></script>-->
-<script src="index.js"></script>
+<script src="./script/script.js"></script>
+<!-- <script src="./script/javascript.js"></script> -->
 </body>
 </html>
