2nd updates moved code from another file to the primary

--- a/lesson09/index.html
+++ b/lesson09/index.html
@@ -129,7 +129,6 @@
 
 </section>
 <!--<script src="./script/oop.js"></script>-->
-<script src="./script/script.js"></script>
-<!-- <script src="./script/javascript.js"></script> -->
+<script src="./script/javascript.js"></script>
 </body>
 </html>
