last updates by lesson 9 advanced

--- a/lesson09_advanced/index.html
+++ b/lesson09_advanced/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
     
+    <div class="time"></div>
+    <div class="timer"></div>
 
-    
     <script src="./script/javascript.js"></script>
 
 </body>
