5th update by lesson 11

--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -130,6 +130,6 @@
 </section>
 
 <script src="./script/javascript.js"></script>
-<script src="./script/script.js"></script>
+<!-- <script src="./script/script.js"></script> -->
 </body>
 </html>
