--- a/lesson12/index.html
+++ b/lesson12/index.html
@@ -49,7 +49,7 @@
             </div>
             <div class="additional_expenses">
                 <div class="additional_expenses-title title">Возможные расходы <span>(перечислите через запятую)</span></div>
-                <input type="text" class="additional_expenses-item" placeholder="название">
+                <input type="text" class="additional_expenses-item" placeholder="Наименование">
 
             </div>
 
@@ -80,7 +80,7 @@
 
             <div class="period">
                 <div class="title period-title">Период расчета</div>
-                <input class="period-select" type="range" step="1" min="1" max="12" value="1" >
+                <input class="period-select" type="range" step="1" min="1" max="12" value="1">
                 <div class="title period-amount">1</div>
             </div>
 
