final update by live time counter

--- a/lesson09_advanced/index.html
+++ b/lesson09_advanced/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     
+    <div class="timer"></div><br>
     <div class="time"></div>
-    <div class="timer"></div>
 
     <script src="./script/javascript.js"></script>
 
