--- a/lesson12_advanced/index.html
+++ b/lesson12_advanced/index.html
@@ -6,12 +6,14 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Document</title>
+    <title>AWESOME Colors</title>
 </head>
 <body>
-    
-    <div class="timer"></div><br>
-    <div class="time"></div>
+
+    <h1>
+        <div id="color"></div>
+        <button id="awesomeColor" type="button">Зажги Сцену</button>
+    </h1>
 
     <script src="./script/javascript.js"></script>
 
