--- a/lesson14-1/index.html
+++ b/lesson14-1/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-<script src="./script/javascript.js"></script>
-<!-- <script src="./script/script.js"></script> -->
+<!-- <script src="./script/javascript.js"></script> -->
+<script src="./script/script.js"></script>
 </body>
 </html>
