1st iteration of work by lesson15

--- a/lesson15/index.html
+++ b/lesson15/index.html
@@ -130,5 +130,6 @@
 </section>
 
 <script src="./script/javascript.js"></script>
+<!-- <script src="./script/test_backup.js"></script> -->
 </body>
 </html>
