--- a/animation/index.html
+++ b/animation/index.html
@@ -1,2 +1,14 @@
-<div></div>
-<script src="script.js" async defer></script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+
+<body>
+  <button class="start">start/stop</button>
+  <button class="reset">reset</button>
+  <div>
+    <img src="https://cdn.shopify.com/s/files/1/0909/9146/files/logo_x100.png?v=1526628740" alt="logo">
+  </div>
+</body>
+<script src="script.js"></script>
