compleated with 1st iteration of works, improved basic & advanced tasks for lesson19

--- a/lesson19/index.html
+++ b/lesson19/index.html
@@ -17,7 +17,7 @@
 	<meta name="theme-color" content="#ffffff">
 </head>
 
-<body>
+<body id="top">
 
 <main>
 	<header>
@@ -96,6 +96,7 @@
 <menu>
 	<a class="close-btn" href="#close">&times;</a>
 	<ul>
+		<li><a href="#top">Шляпа</a></li>
 		<li><a href="#service-block">Наши услуги</a></li>
 		<li><a href="#portfolio">Портфолио</a></li>
 		<li><a href="#calc">Калькулятор стоимости</a></li>
@@ -360,21 +361,20 @@
 		</div>
 	</div>
 </div>
-
 <footer>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-2 col-sm-2 col-12">
-				<a href="#">Главная</a><br>
-				<a href="#">Тарифы</a><br>
+				<a href="#top">Главная</a><br>
+				<a href="#calc">Тарифы</a><br>
 			</div>
 			<div class="col-md-2 col-sm-3 col-12">
-				<a href="#">Вопросы-ответы</a><br>
-				<a href="#">Личный кабинет</a><br>
+				<a href="#connect">Вопросы-ответы</a><br>
+				<a href="#top">Личный кабинет</a><br>
 			</div>
 			<div class="col-md-3 col-sm-4 col-12">
-				<a href="#">Новости</a><br>
-				<a href="#">Договор публичной оферты</a><br>
+				<a href="#top">Новости</a><br>
+				<a href="#top">Договор публичной оферты</a><br>
 			</div>
 			<div class="col-md-3 col-md-offset-2 col-sm-3 col-sm-offset-0 col-12 col-offset-0">
 				<p>Мы в социальных сетях:</p>
@@ -420,6 +420,7 @@
 </div>
 
 <script src="./script/js_test.js"></script>
+<script src="./script/menu.js"></script>
 
 </body>
 </html>
