updates required from curator

--- a/lesson19/index.html
+++ b/lesson19/index.html
@@ -419,8 +419,7 @@
 	</div>
 </div>
 
-<script src="./script/js_test.js"></script>
-<script src="./script/menu.js"></script>
+<script src="./script/script.js"></script>
 
 </body>
 </html>
