--- a/index.html
+++ b/index.html
@@ -22,11 +22,22 @@
     }
     @media (max-width: 1024px) {
       .popup-dialog-menu {
-        width: 549px;
-        height: 841px;
         -webkit-transform: translate3d(555px, 0, 0);
-        transform: translate3d(555px, 0, 0); } 
-      }
+        transform: translate3d(555px, 0, 0); 
+      } 
+    }
+    @media (max-width: 575px) and (max-height: 812px) {
+      .popup-dialog-menu {
+        -webkit-transform: translate3d(0, -100vh, 0);
+          transform: translate3d(0, -100vh, 0);
+      } 
+    }
+    @media (max-width: 575px) and (max-height: 480px) {
+      .popup-dialog-menu {
+        -webkit-transform: translate3d(645px, 0, 0);
+        transform: translate3d(645px, 0, 0);
+      } 
+    }
   </style>
 <body>
 <div class="main" id="main">
